Fixed issues with footer alignment

--- a/level5-D/lesson-20/main.css
+++ b/level5-D/lesson-20/main.css
@@ -172,7 +172,7 @@ body {
   bottom: 43px;
   right: 6.2%;
   font-family: "Arial";
-  width: 30%;
+  width: 35%;
 }
 
 .html-lesson-wrapper footer span {
@@ -208,7 +208,7 @@ body {
   .html-lesson-wrapper footer {
     bottom: clamp(16px, 4.8vw, 43px);
     right: 5% !important;
-    max-width: 34%;
+    max-width: 35%;
   }
 }
 
